# swagger-output.json
@@ -2196,6 +2196,18 @@
             "name": "authorization",
             "in": "header",
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "cash": {
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
         "responses": {
